--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
   - "3.4"
 
-install: pip install tox
+install: pip install tox && sudo apt-get install php5-cli
 
 script: tox && find . \( -name "*.php" -or -name "*.phtml" \) -print0 | xargs -0 -n 1 php -l
