--- a/hblib/Cargo.toml
+++ b/hblib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mfdarchiver-rs"
+name = "hblib"
 version = "0.1.0"
 authors = ["Kunal Mehta <legoktm@member.fsf.org>"]
 edition = "2018"
@@ -7,11 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hblib = { path = "../hblib" }
 anyhow = "1.0"
-chrono = "0.4"
+dirs-next = "2"
+flexi_logger = {version = "0.17.1", default-features = false}
 log = "0.4"
 mediawiki = "0.2.6"
-parsoid = "0.5.0-alpha.1"
-regex = "1"
-tokio = {version = "1", features = ["full"]}
+serde = {version = "1", features = ["derive"]}
+similar = "1.1"
+toml = "0.5"
