--- a/mfdarchiver-rs/Cargo.toml
+++ b/mfdarchiver-rs/Cargo.toml
@@ -11,6 +11,7 @@ hblib = { path = "../hblib" }
 anyhow = "1.0"
 chrono = "0.4"
 log = "0.4"
-parsoid = "0.5.0"
+mwbot = "0.3.2"
+parsoid = "0.6"
 regex = "1"
 tokio = {version = "1", features = ["full"]}
