--- a/goodarticles-rs/Cargo.toml
+++ b/goodarticles-rs/Cargo.toml
@@ -11,5 +11,5 @@ hblib = { path = "../hblib" }
 anyhow = "1.0"
 indexmap = "1.6.1"
 log = "0.4"
-parsoid = "0.5.0"
+mwbot = "0.3.2"
 tokio = {version = "1", features = ["full"]}
